bringing theme settings to all pages.  Index and about done for now.

--- a/AlPastor.html
+++ b/AlPastor.html
@@ -16,7 +16,7 @@
 >
   <header
     id="logoBackgroundSmall"
-    class="bg-gradient-to-r from-transparent to-white flex-shrink text-center uppercase"
+    class="bg-gradient-to-r from-transparent dark:from-transparent to-white dark:to-black flex-shrink text-center uppercase"
   >
     <button
       id="menuButton"
