--- a/BirriaBeef.html
+++ b/BirriaBeef.html
@@ -14,7 +14,7 @@
   <body class="birria-bg relative">
     <header
     id="logoBackgroundSmall"
-    class="bg-gradient-to-r from-transparent to-white flex-shrink text-center uppercase"
+    class="bg-gradient-to-r from-transparent dark:from-transparent to-white dark:to-black flex-shrink text-center uppercase"
   >
     <button
       id="menuButton"
