--- a/CauliflowerTacos.html
+++ b/CauliflowerTacos.html
@@ -15,8 +15,8 @@
   <body class="cauliflower-bg relative">
     <header
       id="logoBackgroundSmall"
-      class="bg-gradient-to-r from-transparent to-white flex-shrink text-center uppercase"
-    >
+      class="bg-gradient-to-r from-transparent dark:from-transparent to-white dark:to-black flex-shrink text-center uppercase"
+      >
       <button
         id="menuButton"
         class="absolute top-10 left-10 p-2 bg-gray-800 bg-opacity-30 text-white rounded"
