--- a/recipe-BirriaBeef.html
+++ b/recipe-BirriaBeef.html
@@ -10,13 +10,10 @@
       type="image/png"
     />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
-    />
-    <script defer src="./assets/js/homepage.js"></script>
-    <script defer src="assets\js\recipe.js"></script>
-    <script defer src="./assets/js/menu.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script defer src="./assets/js/tailwind.config.js"></script>
+    <script defer src="./assets/js/recipe.js"></script>
+    <script defer src="./assets/js/logic.js"></script>
   </head>
   <body class="birria-bg relative">
     <header
@@ -132,7 +129,7 @@
         >
           Generate Shopping List</button
         ><a
-          href="./AlPastor.html"
+          href="./BirriaBeef.html"
           class="m-4 p-2 bg-gray-800 bg-opacity-50 text-white rounded"
         >
           I have everything! Let's Cook!
