--- a/recipe-ChipotleChicken.html
+++ b/recipe-ChipotleChicken.html
@@ -10,12 +10,10 @@
       type="image/png"
     />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
-    />
-    <script defer src="./assets/js/menu.js"></script>
-    <script defer src="assets\js\recipe.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script defer src="./assets/js/tailwind.config.js"></script>
+    <script defer src="./assets/js/recipe.js"></script>
+    <script defer src="./assets/js/logic.js"></script>
   </head>
   <body class="chicken-bg relative">
     <header
