added bio photos with theme switching properties.

--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
         <section
           class="flex flex-col items-center m-4 p-4 bg-white/80 dark:bg-zinc-800/70 text-zinc-900 dark:text-white rounded max-w-fit mx-auto"
         >
-          <img class="bioImage" src="" alt="" />
+        <img class="rounded-xl border-4 border-zinc-600 dark:border-white" src="./assets/images/mason.jpg" alt="Profile photo of Mason Ott" />
           <h2 class="m-2 p-2 text-4xl font-medium">Mason Ott</h2>
           <p class="">
             Mason Ott, a coding bootcamp student living in Utah, juggles his
@@ -85,8 +85,8 @@
         <section
         class="flex flex-col items-center m-4 p-4 bg-white/80 dark:bg-zinc-800/70 text-zinc-900 dark:text-white rounded max-w-fit mx-auto"
         >
-          <img class="bioImage" src="" alt="" />
-          <h2 class="m-2 p-2 text-4xl font-medium">Jesse Anderson</h2>
+        <img class="rounded-xl border-4 border-zinc-600 dark:border-white" src="./assets/images/jesse.jpg" alt="Profile photo of Jesse Anderson" />
+        <h2 class="m-2 p-2 text-4xl font-medium">Jesse Anderson</h2>
           <p>
             Jesse Anderson, a coding bootcamp student and bachelor residing in Utah, expertly navigates the rugged terrain of both land surveying and coding. A former rock climber, he now scales the heights of JavaScript and HTML instead of sandstone cliffs. By day, Jesse maps out the great outdoors with precision, and by night, he maps out his coding dreams on his laptop. His life is a unique blend of topographical maps and terminal commands, peppered with the occasional memory of adrenaline-fueled climbs. Jesse’s journey from summits to syntax showcases his ability to conquer any challenge, whether it be a mountain face or a mountain of code.
           </p>
@@ -114,7 +114,7 @@
         <section
         class="flex flex-col items-center m-4 p-4 bg-white/80 dark:bg-zinc-800/70 text-zinc-900 dark:text-white rounded max-w-fit mx-auto"
         >
-          <img class="bioImage" src="" alt="" />
+          <img class="rounded-xl border-4 border-zinc-600 dark:border-white" src="./assets/images/ian.jpg" alt="Profile photo of Ian Ferguson" />
           <h2 class="m-2 p-2 text-4xl font-medium">Ian Ferguson</h2>
           <p>
             Ian Ferguson, an Arizona resident and former race car driver, now
@@ -153,7 +153,7 @@
       <section
       class="flex flex-col items-center m-4 p-4 bg-white/80 dark:bg-zinc-800/70 text-zinc-900 dark:text-white rounded max-w-fit mx-auto"
       >
-      <h2 class="m-2 p-2 text-4xl font-medium">Project GitHub Repository:</h2>
+      <h2 class="m-2 p-2 text-4xl font-medium">Project GitHub Repository</h2>
       <section class="flex flex-row justify-center m-4">
         <a
           href="https://github.com/TEMPTAG/Project-1"
