--- a/recipe-ChipotleChicken.html
+++ b/recipe-ChipotleChicken.html
@@ -103,7 +103,7 @@
       id="shoppingListModal"
       class="fixed inset-0 bg-gray-800 bg-opacity-75 flex items-center justify-center hidden"
     >
-      <div class="bg-white rounded-lg p-6 w-1/2">
+      <div class="bg-white rounded-lg p-6 w-1/8">
         <h2 class="text-2xl font-medium mb-4">Shopping List</h2>
         <ul id="shoppingList" class="list-disc list-inside"></ul>
         <button
@@ -112,6 +112,12 @@
         >
           Shopping Done!  Let's cook!
         </button>
+        <!--<button
+          id="closeModal"
+          class="mt-4 p-2 bg-gray-800 bg-opacity-50 text-white rounded"
+        >
+          Go Back
+        </button>-->
       </div>
       
     </main>
