moved theme button to menu for cleaner look.

--- a/menu.html
+++ b/menu.html
@@ -30,8 +30,8 @@
     <a href="./index.html" class="p-4">Home</a>
     <p class="pt-4 pb-4">|</p>
     <a href="./about.html" class="p-4">About</a>
-    <!-- <p class="pt-4 pb-4">|</p>
-    <button id="themeButton" class="p-4">◑</button> -->
+    <p class="pt-4 pb-4">|</p>
+    <button id="themeButton" class="p-4">◑</button>
   </footer>
 </div>
 <div id="overlay" class="fixed inset-0 hidden bg-black bg-opacity-50"></div>
