add cauliflower.js with timer 5 JS code

--- a/AlPastor.html
+++ b/AlPastor.html
@@ -49,7 +49,8 @@
           </p>
           <br>
           <p>
-            2.Once lightly browned, add the seeded and stemmed guajillo chiles and bay leaves. Saute for 1-2 minutes. <button class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center">Timer</button>
+            2.Once lightly browned, add the seeded and stemmed guajillo chiles and bay leaves. Saute for 1-2 minutes. 
+            <button id="timer" class="top-10 left-10 p-1 bg-zinc-800/80 dark:bg-white text-white dark:text-zinc-800 text-sm rounded">Timer</button>
           </p>
           <br>
           <p>
@@ -57,7 +58,8 @@
           </p>
           <br> 
           <p>
-            4.Cover on low heat for 10 minutes, then turn off heat and let it cool. <button class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center">Timer</button>
+            4.Cover on low heat for 10 minutes, then turn off heat and let it cool. 
+            <button id="timer" class="top-10 left-10 p-1 bg-zinc-800/80 dark:bg-white text-white dark:text-zinc-800 text-sm rounded">Timer</button>
           </p>
           <br> 
           <p>
@@ -65,18 +67,19 @@
             Chipotle Chiles, Chicken Stock, and Pineapple Juice, and blend until very smooth.
           </p>
           <br> 
-          <p>
+          <p class="flex flex- items-center">
             6.Pour the contents of the blender through a fine-mesh strainer into a large bowl. 
             Push the blended marinade through the strainer until no liquid remains. Discard the solids 
-            <button class="group flex-inline relative">
-              <span class="text-black bg-red-500 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center">Chef Note</span>
-              <span class="group-hover:opacity-75 transition-opacity bg-white px-2 text-sm text-black rounded-lg absolute opacity-0 m-5 mx-auto">the_Chicken_Thighs_will_continue_to_cook_while_they_rest,_so_make_sure_you_plan_for_that_in_your_cooking_time_and_temperature</span> 
-            </button>
+            <button class="group flex">
+              <img src="./assets/logo/YesChefFavicon180.png" alt="Chef note" class="max-w-8 m-2">
+              <span class="group-hover:opacity-75 bg-white text-sm text-black rounded-lg absolute opacity-0 m-3 ">the_Chicken_Thighs_will_continue_to_cook_while_they_rest,_so_make_sure_you_plan_for_that_in_your_cooking_time_and_temperature</span> 
+              </button>
           </p>
           <br> 
           <p>
             7.Mix the Pork slices into the large bowl of marinade until they are coated. 
-            Cover and put back into the refrigerator to marinate for 4-24 hours. <button class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center">Timer</button>
+            Cover and put back into the refrigerator to marinate for 4-24 hours. 
+            <button id="timer" class="top-10 left-10 p-1 bg-zinc-800/80 dark:bg-white text-white dark:text-zinc-800 text-sm rounded">Timer</button>
           </p>
           <br>
         </article>
@@ -85,12 +88,12 @@
       <section class="m-4 p-4 bg-white/90 dark:bg-zinc-800/90 text-zinc-900 dark:text-white rounded w-max mx-auto">
         <h4>Cooking the Pork</h4>
         <article class="indent-5">
-          <p>
+          <p class="flex flex- items-center">
             1.Preheat your bbq grill to as hot as possible. 
-            <button class="group flex-inline relative">
-              <span class="text-black bg-red-500 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center">Chef Note</span>
-              <span class="group-hover:opacity-75 transition-opacity bg-white px-2 text-sm text-black rounded-lg absolute opacity-0 m-5 mx-auto">the_Chicken_Thighs_will_continue_to_cook_while_they_rest,_so_make_sure_you_plan_for_that_in_your_cooking_time_and_temperature</span> 
-          </button>
+            <button class="group flex">
+              <img src="./assets/logo/YesChefFavicon180.png" alt="Chef note" class="max-w-8 m-2">
+              <span class="group-hover:opacity-75 bg-white text-sm text-black rounded-lg absolute opacity-0 m-3 ">the_Chicken_Thighs_will_continue_to_cook_while_they_rest,_so_make_sure_you_plan_for_that_in_your_cooking_time_and_temperature</span> 
+              </button>
           </p>
           <br> 
           <p>
@@ -101,8 +104,12 @@
             3.Slice and cook Pineapple slices on the grill alongside the Pork for best flavor
           </p>
           <br>
-          <p>
-            4.Once cooked fully, remove the Pork from the Grill and let it rest for a minimum of 10 minutes <button class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center">Timer</button>
+          <p class="flex flex- items-center">
+            4.Once cooked fully, remove the Pork from the Grill and let it rest for a minimum of 10 minutes 
+            <button class="group flex">
+              <img src="./assets/logo/YesChefFavicon180.png" alt="Chef note" class="max-w-8 m-2">
+              <span class="group-hover:opacity-75 bg-white text-sm text-black rounded-lg absolute opacity-0 m-3 ">the_Chicken_Thighs_will_continue_to_cook_while_they_rest,_so_make_sure_you_plan_for_that_in_your_cooking_time_and_temperature</span> 
+              </button>
           </p>
           <br> 
           <p>
