--- a/BirriaBeef.html
+++ b/BirriaBeef.html
@@ -40,14 +40,11 @@
 
     <main>
       <section
-        class="m-4 p-4 bg-white/90 dark:bg-zinc-800/90 text-zinc-900 dark:text-white rounded w-max mx-auto"
-      >
+        class="m-4 p-4 bg-white/90 dark:bg-zinc-800/90 text-zinc-900 dark:text-white rounded w-max mx-auto">
         <h1 class="text-4xl font-medium">Let's Start Cooking Birria Beef</h1>
       </section>
 
-      <section
-        class="m-4 p-4 bg-white/90 dark:bg-zinc-800/90 text-zinc-900 dark:text-white rounded w-max mx-auto"
-      >
+      <section class="m-4 p-4 bg-white/90 dark:bg-zinc-800/90 text-zinc-900 dark:text-white rounded w-max mx-auto">
         <h2>Prepare the Chuck Roast:</h2>
         <article class="indent-5">
           <p>
@@ -57,19 +54,13 @@
           <br />
           <p>2. Season the Chuck Roast with Salt and Pepper</p>
           <br />
-          <p>
+          <p class="flex flex- items-center">
             3. Heat Olive Oil in a Large Dutch Oven, and sear all sides of the
             seasoned Chuck Roast on medium-high heat
-            <button class="group flex-inline relative">
-              <span
-                class="text-black bg-red-500 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center"
-                >Chef Note</span
-              >
-              <span
-                class="group-hover:opacity-75 transition-opacity bg-white px-2 text-sm text-black rounded-lg absolute opacity-0 m-5 mx-auto"
-                >the_Chicken_Thighs_will_continue_to_cook_while_they_rest,_so_make_sure_you_plan_for_that_in_your_cooking_time_and_temperature</span
-              >
-            </button>
+            <button class="group flex">
+              <img src="./assets/logo/YesChefFavicon180.png" alt="Chef note" class="max-w-8 m-2">
+              <span class="group-hover:opacity-75 bg-white text-sm text-black rounded-lg absolute opacity-0 m-3 ">the_Chicken_Thighs_will_continue_to_cook_while_they_rest,_so_make_sure_you_plan_for_that_in_your_cooking_time_and_temperature</span> 
+              </button>
           </p>
           <br />
           <p>
@@ -84,19 +75,13 @@
       >
         <h3>Prepare the Marinade:</h3>
         <article class="indent-5">
-          <p>
+          <p class="flex flex- items-center">
             1. Rinse, stem, and seed the Guajillo, Ancho, and Árbol chiles, and
             add them to a medium-sized pot
-            <button class="group flex-inline relative">
-              <span
-                class="text-black bg-red-500 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center"
-                >Chef Note</span
-              >
-              <span
-                class="group-hover:opacity-75 transition-opacity bg-white px-2 text-sm text-black rounded-lg absolute opacity-0 m-5 mx-auto"
-                >the_Chicken_Thighs_will_continue_to_cook_while_they_rest,_so_make_sure_you_plan_for_that_in_your_cooking_time_and_temperature</span
-              >
-            </button>
+            <button class="group flex">
+              <img src="./assets/logo/YesChefFavicon180.png" alt="Chef note" class="max-w-8 m-2">
+              <span class="group-hover:opacity-75 bg-white text-sm text-black rounded-lg absolute opacity-0 m-3 ">the_Chicken_Thighs_will_continue_to_cook_while_they_rest,_so_make_sure_you_plan_for_that_in_your_cooking_time_and_temperature</span> 
+              </button>
           </p>
           <br />
           <p>
@@ -119,33 +104,21 @@
             heat
           </p>
           <br />
-          <p>
+          <p class="flex flex- items-center">
             6. Reduce the heat to low, cover, and let the pot simmer for 10min
-            <button class="group flex-inline relative">
-              <span
-                class="text-black bg-red-500 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center"
-                >Chef Note</span
-              >
-              <span
-                class="group-hover:opacity-75 transition-opacity bg-white px-2 text-sm text-black rounded-lg absolute opacity-0 m-5 mx-auto"
-                >the_Chicken_Thighs_will_continue_to_cook_while_they_rest,_so_make_sure_you_plan_for_that_in_your_cooking_time_and_temperature</span
-              >
-            </button>
+            <button class="group flex">
+              <img src="./assets/logo/YesChefFavicon180.png" alt="Chef note" class="max-w-8 m-2">
+              <span class="group-hover:opacity-75 bg-white text-sm text-black rounded-lg absolute opacity-0 m-3 ">the_Chicken_Thighs_will_continue_to_cook_while_they_rest,_so_make_sure_you_plan_for_that_in_your_cooking_time_and_temperature</span> 
+              </button>
           </p>
           <br />
-          <p>
+          <p class="flex flex- items-center">
             7. after 10min, using a slotted spoon, transfer the ingredients to a
             blender or food processor (SAVE THE WATER!)
-            <button class="group flex-inline relative">
-              <span
-                class="text-black bg-red-500 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center"
-                >Chef Note</span
-              >
-              <span
-                class="group-hover:opacity-75 transition-opacity bg-white px-2 text-sm text-black rounded-lg absolute opacity-0 m-5 mx-auto"
-                >the_Chicken_Thighs_will_continue_to_cook_while_they_rest,_so_make_sure_you_plan_for_that_in_your_cooking_time_and_temperature</span
-              >
-            </button>
+            <button class="group flex">
+              <img src="./assets/logo/YesChefFavicon180.png" alt="Chef note" class="max-w-8 m-2">
+              <span class="group-hover:opacity-75 bg-white text-sm text-black rounded-lg absolute opacity-0 m-3 ">the_Chicken_Thighs_will_continue_to_cook_while_they_rest,_so_make_sure_you_plan_for_that_in_your_cooking_time_and_temperature</span> 
+              </button>
           </p>
           <br />
           <p>
@@ -176,11 +149,7 @@
           <p>
             3. Reduce to low heat, cover, and cook for 3-3 1/2 hours until the
             Chuck Roast is fall-apart tender
-            <button
-              class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center"
-            >
-              Timer
-            </button>
+            <button id="timer" class="top-10 left-10 p-1 bg-zinc-800/80 dark:bg-white text-white dark:text-zinc-800 text-sm rounded">Timer</button>
           </p>
           <br />
           <p>4. Remove the Chuck Roast, shred, and return to the Dutch Oven</p>
@@ -190,19 +159,13 @@
       <section
         class="m-4 p-4 bg-white/90 dark:bg-zinc-800/90 text-zinc-900 dark:text-white rounded w-max mx-auto"
       >
-        <p>
+        <p class="flex flex- items-center">
           Serve as a stew with cilantro and white onions, or in tacos, burritos,
           etc.
-          <button class="group flex-inline relative">
-            <span
-              class="text-black bg-red-500 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center"
-              >Chef Note</span
-            >
-            <span
-              class="group-hover:opacity-75 transition-opacity bg-white px-2 text-sm text-black rounded-lg absolute opacity-0 m-5 mx-auto"
-              >the_Chicken_Thighs_will_continue_to_cook_while_they_rest,_so_make_sure_you_plan_for_that_in_your_cooking_time_and_temperature</span
-            >
-          </button>
+          <button class="group flex">
+            <img src="./assets/logo/YesChefFavicon180.png" alt="Chef note" class="max-w-8 m-2">
+            <span class="group-hover:opacity-75 bg-white text-sm text-black rounded-lg absolute opacity-0 m-3 ">the_Chicken_Thighs_will_continue_to_cook_while_they_rest,_so_make_sure_you_plan_for_that_in_your_cooking_time_and_temperature</span> 
+            </button>
         </p>
       </section>
     </main>
