--- a/CarneAsada.html
+++ b/CarneAsada.html
@@ -106,65 +106,41 @@
           <p>
             4. Mix the meat in the marinade, seal, and let it marinate in the
             refrigerator for 24 hours.
-            <button
-              class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center"
-            >
-              Timer
-            </button>
+            <button id="timer" class="p-1 bg-zinc-800/80 dark:bg-white text-white dark:text-zinc-800 text-sm rounded m-2">Timer</button>
           </p>
           <br />
           <p>5. Flip the meat in the marinade halfway through</p>
         </article>
       </section>
 
-      <section
-        class="m-4 p-4 bg-white/90 dark:bg-zinc-800/90 text-zinc-900 dark:text-white rounded w-max mx-auto"
-      >
+      <section class="m-4 p-4 bg-white/90 dark:bg-zinc-800/90 text-zinc-900 dark:text-white rounded w-max mx-auto">
         <h4>Cook the Marinated Arrachera</h4>
         <article class="indent-5">
-          <p>
+          <p class="flex flex- items-center">
             1.Put your grill on as high of heat as possible.
-            <button class="group flex-inline relative">
-              <span
-                class="text-black bg-red-500 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center"
-                >Chef Note</span
-              >
-              <span
-                class="group-hover:opacity-75 transition-opacity bg-white px-2 text-sm text-black rounded-lg absolute opacity-0 m-5 mx-auto"
-                >the_Chicken_Thighs_will_continue_to_cook_while_they_rest,_so_make_sure_you_plan_for_that_in_your_cooking_time_and_temperature</span
-              >
-            </button>
+            <button class="group flex">
+              <img src="./assets/logo/YesChefFavicon180.png" alt="Chef note" class="max-w-8 m-2">
+              <span class="group-hover:opacity-75 bg-white text-sm text-black rounded-lg absolute opacity-0 m-3 ">the_Chicken_Thighs_will_continue_to_cook_while_they_rest,_so_make_sure_you_plan_for_that_in_your_cooking_time_and_temperature</span> 
+              </button>
             <!-- <button class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center before:content-['Chef_Note'] hover:before:content-['The_hotter_the_better,_as_a_little_bit_of_char_on_the_outside_of_the_meat_makes_for_amazing_flavor!']">
             </button> -->
           </p>
           <br />
           <p>2. Lightly oil the grill with some Avocado oil</p>
           <br />
-          <p>
+          <p class="flex flex- items-center">
             3. Cook the Arrachera until desired temperature
             <!-- <button class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center before:content-['Chef_Note'] hover:before:content-['The_thin_Arrachera_cooks_very_fast_so_do_not_leave_it_unattended!']"></button> -->
-            <button class="group flex-inline relative">
-              <span
-                class="text-black bg-red-500 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center"
-                >Chef Note</span
-              >
-              <span
-                class="group-hover:opacity-75 transition-opacity bg-white px-2 text-sm text-black rounded-lg absolute opacity-0 m-5 mx-auto"
-                >the_Chicken_Thighs_will_continue_to_cook_while_they_rest,_so_make_sure_you_plan_for_that_in_your_cooking_time_and_temperature</span
-              >
-            </button>
+            <button class="group flex">
+              <img src="./assets/logo/YesChefFavicon180.png" alt="Chef note" class="max-w-8 m-2">
+              <span class="group-hover:opacity-75 bg-white text-sm text-black rounded-lg absolute opacity-0 m-3 ">the_Chicken_Thighs_will_continue_to_cook_while_they_rest,_so_make_sure_you_plan_for_that_in_your_cooking_time_and_temperature</span> 
+              </button>
           </p>
           <br />
           <p>
             4. Let stand for 10 minutes after removing from the grill and slice
             against the grain
-            <button
-              class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center"
-            >
-              Timer
-            </button>
-
-            <!-- <button class="text-black bg-red-200 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center">Timer</button> -->
+            <button id="timer" class="p-1 bg-zinc-800/80 dark:bg-white text-white dark:text-zinc-800 text-sm rounded m-2">Min Timer</button>
           </p>
           <br />
           <p>
@@ -175,5 +151,6 @@
         </article>
       </section>
     </main>
+    <script src="./assets/js/cooking.js"></script>
   </body>
 </html>
