--- a/CauliflowerTacos.html
+++ b/CauliflowerTacos.html
@@ -3,233 +3,107 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cauliflower Tacos Cooking Guide</title>
-    <link rel="stylesheet" href="cooking.css" />
+    <title>Chipotle Chicken Cooking Guide</title>
+    <link rel="stylesheet" href="./assets/css/cooking.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script defer src="./assets/js/tailwind.config.js"></script>
-    <script defer src="./assets/js/cooking.js"></script>
     <script defer src="./assets/js/logic.js"></script>
   </head>
+    <!-- add resizing for webpage -->
+  <body class="bg-chicken bg-fixed bg-cover bg-contain bg-no-repeat bg-center text-black dark:text-white">
 
-  <body
-    class="bg-cauliflower bg-fixed bg-cover bg-contain bg-no-repeat bg-center text-black dark:text-white"
-  >
-    <div
-      class="bg-transparent dark:bg-black/20 fixed inset-0 pointer-events-none"
-    ></div>
+      <div class="bg-transparent dark:bg-black/20 fixed inset-0 pointer-events-none"></div>
 
-    <header
-      id="logoBackgroundSmall"
-      class="bg-gradient-to-r from-transparent dark:from-transparent to-white/90 dark:to-zinc-800/90 flex-shrink"
-    >
-      <button
-        id="menuButton"
-        class="absolute top-10 left-10 p-2 bg-zinc-800 bg-opacity-30 text-white dark:text-zinc-300 rounded"
-      >
-        Menu
-      </button>
-      <img
-        id="logo"
-        src="./assets/logo/YesChefLogoBlack.svg"
-        alt="Yes, Chef Logo"
-        class="relative ml-auto mr-4 h-36"
-      />
+    <header id="logoBackgroundSmall" class="bg-gradient-to-r from-transparent dark:from-transparent to-white/90 dark:to-zinc-800/90 flex-shrink">
+      <button id="menuButton" class="absolute top-10 left-10 p-2 bg-zinc-800 bg-opacity-30 text-white dark:text-zinc-300 rounded">Menu</button>
+      <img id="logo" src="./assets/logo/YesChefLogoBlack.svg" alt="Yes, Chef Logo" class="relative ml-auto mr-4 h-36"/>
     </header>
 
-    <div id="menuContainer"></div>
+      <div id="menuContainer"></div>
 
     <main>
-      <section
-        class="m-4 p-4 bg-white/90 dark:bg-zinc-800/90 text-zinc-900 dark:text-white rounded w-max mx-auto"
-      >
-        <h1 class="text-4xl font-medium">
-          Let's Start Cooking Cauliflower Tacos
-        </h1>
+      <section class="m-4 p-4 bg-white/90 dark:bg-zinc-800/90 text-zinc-900 dark:text-white rounded w-max mx-auto">
+        <h1 class="text-4xl font-medium">Lets Start Cooking Cauliflower Tacos</h1>
       </section>
 
-      <section
-        class="m-4 p-4 bg-white/90 dark:bg-zinc-800/90 text-zinc-900 dark:text-white rounded w-max mx-auto"
-      >
-        <h2>Cook the Cauliflower</h2>
+      <section class="m-4 p-4 bg-white/90 dark:bg-zinc-800/90 text-zinc-900 dark:text-white rounded w-max mx-auto">
+        <h2>Cook the Cauliflower:</h2>
         <article class="indent-5">
-          <p>
-            1. reheat oven to 400 degrees with one rack in the middle position,
-            and one in the bottom position
-          </p>
-          <br />
+          <p>1. Cook the Cauliflower:</p>
+            <br/>
           <p>2. Rinse the Cauliflower and cut into bite-sized florets</p>
-          <br />
-          <p>
-            3. Toss Cauliflower in a large bowl with the Cumin, Ancho Chili
-            Powder, Paprika, and Salt.
-          </p>
-          <br />
-          <p>
-            4. Spread the Cauliflower on a lined baking sheet and place on the bottom rack of the oven to roast for 20min 
-            <button id="timer5" class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center">Timer</button>
-            <button class="group flex-line relative">
-              <span
-                class="text-black bg-red-500 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center"
-                >Chef Note</span
-              >
-              <span
-                class="group-hover:opacity-75 transition-opacity bg-white px-2 text-sm text-black rounded-lg absolute opacity-0 m-5 mx-auto"
-                >the_Chicken_Thighs_will_continue_to_cook_while_they_rest,_so_make_sure_you_plan_for_that_in_your_cooking_time_and_temperature</span
-              >
+            <br />
+          <p>3. Toss Cauliflower in a large bowl with the Cumin, Ancho Chili Powder, Paprika, and Salt.</p>
+            <br />
+          <p class="flex flex- items-center">4. Spread the Cauliflower on a lined baking sheet and place on the bottom rack of the oven to roast for 20min
+            <button id="timer4" class="top-10 left-10 p-1 bg-zinc-800/80 dark:bg-white text-white dark:text-zinc-800 text-sm rounded m-2">20 Min Timer</button>
+            <button class="group flex">
+              <img src="./assets/logo/YesChefFavicon180.png" alt="Chef note" class="max-w-8 m-2">
+                <span class="group-hover:opacity-75 bg-white text-sm text-black rounded-lg absolute opacity-0 m-3 ">check Cauliflower at 20min, if it is not golden brown and tender, roast for another 5min</span> 
             </button>
-            <!-- <button class="text-black bg-red-200 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center">Timer</button> <button class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center before:content-['Chef_Note'] hover:before:content-['Check_Cauliflower_at_20_min,_if_it_is_not_golden_brown_and_tender,_roast_for_another_5_min']"> -->
-            <!-- </button> -->
           </p>
-          <br />
-          <p>
-            5. Remove from the Oven, prepare the tacos, and serve as fresh as
-            possible
-            <button class="group flex-line relative">
-              <span
-                class="text-black bg-red-500 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center"
-                >Chef Note</span
-              >
-              <span
-                class="group-hover:opacity-75 transition-opacity bg-white px-2 text-sm text-black rounded-lg absolute opacity-0 m-5 mx-auto"
-                >the_Chicken_Thighs_will_continue_to_cook_while_they_rest,_so_make_sure_you_plan_for_that_in_your_cooking_time_and_temperature</span
-              >
+            
+          <p class="flex flex- items-center">5. Remove from the Oven, prepare the tacos, and serve as fresh as possible
+            <button class="group flex">
+              <img src="./assets/logo/YesChefFavicon180.png" alt="Chef note" class="max-w-8 m-2">
+                <span class="group-hover:opacity-75 bg-white text-sm text-black rounded-lg absolute opacity-0 m-3 ">Prepare the taco components before the Cauliflower is done roasting so you can build the tacos and serve immediately</span> 
             </button>
-            <!-- <button class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center before:content-['Chef_Note'] hover:before:content-['Prepare_the_taco_components_before_the_Cauliflower_is_done_roasting_so_you_can_build_the_tacos_and_serve_immediately']">
-          </button> -->
           </p>
         </article>
       </section>
 
-      <section
-        class="m-4 p-4 bg-white/90 dark:bg-zinc-800/90 text-zinc-900 dark:text-white rounded w-max mx-auto"
-      >
+      <section class="m-4 p-4 bg-white/90 dark:bg-zinc-800/90 text-zinc-900 dark:text-white rounded w-max mx-auto">
         <h3>Make the Chipotle Sauce:</h3>
         <article class="indent-5">
-          <p>
-            1. On another lined baking sheet, add the 1/4 cup of Raw Almonds and
-            4 Garlic Cloves with skin.n
+          <p>1. On another lined baking sheet, add the 1/4 cup of Raw Almonds and 4 Garlic Cloves with skin.</p>
+            <br />
+          <p class="flex flex- items-center">2. Roast the Almonds and Garlic Cloves with Skin on the middle rack for 8min
+            <button id="timer2" class="top-10 left-10 p-1 bg-zinc-800/80 dark:bg-white text-white dark:text-zinc-800 text-sm rounded m-2">8 Min Timer</button>
+            <button class="group flex">
+              <img src="./assets/logo/YesChefFavicon180.png" alt="Chef note" class="max-w-8 m-2">
+                <span class="group-hover:opacity-75 bg-white text-sm text-black rounded-lg absolute opacity-0 m-3 ">Check at 8min to see if the Almonds are dark and starting to split; if not continue roasting for 2-4 more minutes - do not let the Almonds burn</span> 
+            </button>
           </p>
-          <br />
-          <p>
-            2. Roast the Almonds and Garlic Cloves with Skin on the middle rack
-            for 8min
-            <!-- <button class="text-black bg-red-200 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center">Timer</button> <button class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center before:content-['Chef_Note'] hover:before:content-['Check_at_8min_to_see_if_the_Almonds_are_dark_and_starting_to_split;_if_not_continue_roasting-for_2-4_more_minutes_-_do_not_let_the_Almonds_burn']">
-
-            </button> -->
           </p>
-          <br />
-          <p>
-            3. When the Almonds and Garlic Cloves with Skin are done roasting,
-            remove them from the oven and set aside
-          </p>
-          <br />
-          <section class="p-4 bg-white bg-opacity-40 rounded w-max mx-auto">
-            <h6>Make the Chipotle Sauce:</h6>
-            <article article class="indent-5">
-            <p>
-              1. On another lined baking sheet, add the 1/4 cup of Raw Almonds and 4 Garlic Cloves with skin.
-            </p>
-            <br>
-            <p>
-              2. Roast the Almonds and Garlic Cloves with Skin on the middle rack for 8min 
-              *Chef Note: Check at 8min to see if the Almonds are dark and starting to split; if not continue roasting for 2-4 more minutes - do not let the Almonds burn
-            </p>
-            <br>
-            <p>
-              3
-            </p>
-          <p>
-            4. Drain the can of Fire-Roasted Tomatoes and add to a blender or
-            food processor along with the roasted Almonds, roasted Garlic Cloves
-            (remove skin), raw Garlic Cloves, Avocado Oil, the juice from the
-            Lime, Paprika, Cumin, Salt, Honey, and 1 can of Chipotle Peppers in
-            Adobo sauce
-          </p>
-          <br />
+            <br />
+          <p>3. When the Almonds and Garlic Cloves with Skin are done roasting, remove them from the oven and set aside</p>
+            <br />
+          <p>4. Drain the can of Fire-Roasted Tomatoes and add to a blender or food processor along with the roasted Almonds, roasted Garlic Cloves (remove skin), raw Garlic Cloves, Avocado Oil, the juice from the Lime, Paprika, Cumin, Salt, Honey, and 1 can of Chipotle Peppers in Adobo sauce</p>
+            <br />
           <p>5. Blend on high until very smooth</p>
-          <br />
-          <p>
-            6. Chef's unpopular extra step: Put the sauce in the refrigerator so
-            it is cool with put on top of the fresh roasted Cauliflower when the
-            tacos are assembled - it lightly melts the sauce and brings out
-            great flavors while introducing a temperature dynamic to hese tacos
-            that have an incredible textual dynamic
-          </p>
+            <br />
+          <p>6. Chef's unpopular extra step: Put the sauce in the refrigerator so it is cool with put on top of the fresh roasted Cauliflower when the tacos are assembled - it lightly melts the sauce and brings out great flavors while introducing a temperature dynamic to these tacos that have an incredible textual dynamic</p>
         </article>
       </section>
 
-      <section
-        class="m-4 p-4 bg-white/90 dark:bg-zinc-800/90 text-zinc-900 dark:text-white rounded w-max mx-auto"
-      >
-        <h4>Prepare the taco components:</h4>
+      <section class="m-4 p-4 bg-white/90 dark:bg-zinc-800/90 text-zinc-900 dark:text-white rounded w-max mx-auto">
+        <h4>Prepare the Taco Components:</h4>
         <article class="indent-5">
-          <p>1. Slice the Lime to serve wedges alongside the Tacos.</p>
+          <p>1.Slice the Lime to serve wedges alongside the Tacos</p>
+            <br />
+          <p>2. Half, deseed, skin and thinly slice the Avocado</p>
           <br />
-          <p>2. Half, deseed, skin and thinly slice the Avocado.</p>
-          <br />
-          <p>
-            3. Rinse and very thinly slice the Red Cabbage
-            <button
-              class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center"
-            >
-              Timer
+          <p class="flex flex- items-center">3.Rinse and very thinly slice the Red Cabbage
+            <button class="group flex">
+              <img src="./assets/logo/YesChefFavicon180.png" alt="Chef note" class="max-w-8 m-2">
+                <span class="group-hover:opacity-75 bg-white text-sm text-black rounded-lg absolute opacity-0 m-3 ">Also very good if it is cold from the refrigerator at time of plating</span> 
             </button>
-            <button class="group flex-inline relative">
-              <span
-                class="text-black bg-red-500 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center"
-                >Chef Note</span
-              >
-              <span
-                class="group-hover:opacity-75 transition-opacity bg-white px-2 text-sm text-black rounded-lg absolute opacity-0 m-5 mx-auto"
-                >the_Chicken_Thighs_will_continue_to_cook_while_they_rest,_so_make_sure_you_plan_for_that_in_your_cooking_time_and_temperature</span
-              >
-            </button>
-            <!-- <button class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center before:content-['Chef_Note'] hover:before:content-['Also_very_good_if_it_is_cold_from_the_refrigerator_at_time_of_plating']">
-              </button> -->
           </p>
-          <br />
+            <br />
           <p>4. Rinse and dice the Cilantro</p>
           <br />
           <p>5. Heat the Tortillas in a pan on the stove</p>
         </article>
       </section>
 
-      <section
-        class="m-4 p-4 bg-white/90 dark:bg-zinc-800/90 text-zinc-900 dark:text-white rounded w-max mx-auto"
-      >
-        <h4>Prepare the taco components:</h4>
-        <article class="indent-5">
-          <p>1. Slice the Lime to serve wedges alongside the Tacos.</p>
-          <br />
-          <p>2. Half, deseed, skin and thinly slice the Avocado.</p>
-          <br />
-          <p>
-            3. Rinse and very thinly slice the Red Cabbage
-            <button
-              class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center before:content-['Chef_Note'] hover:before:content-['Also_very_good_if_it_is_cold_from_the_refrigerator_at_time_of_plating']"
-            ></button>
-          </p>
-          <br />
-          <p>4. Rinse and dice the Cilantro</p>
-          <br />
-          <p>5. Heat the Tortillas in a pan on the stove</p>
-        </article>
-      </section>
-      <section
-        class="m-4 p-4 bg-white/90 dark:bg-zinc-800/90 text-zinc-900 dark:text-white rounded w-max mx-auto"
-      >
+      <section class="m-4 p-4 bg-white/90 dark:bg-zinc-800/90 text-zinc-900 dark:text-white rounded w-max mx-auto">
         <h5>Plating the Tacos:</h5>
         <article class="indent-5">
-          <p>
-            Put the Cauliflower in a tortilla with a generous portion of the
-            Chipotle Sauce. Sprinkle some Red Cabbage and Cilantro on top. The
-            Avocado can be served in the taco or on the side. Serve with a Lime
-            Wedge. Enjoy!
-          </p>
+          <p>Put the Cauliflower in a tortilla with a generous portion of the Chipotle Sauce. Sprinkle some Red Cabbage and Cilantro on top. The Avocado can be served in the taco or on the side. Serve with a Lime Wedge. Enjoy!</p>
         </article>
       </section>
     </main>
-    <script src="./assets/js/cooking.js"></script>
+    <script src="./assets/js/cauliflower.js"></script>
   </body>
 </html>
