added timer functions to Carne Asada HTML

--- a/CauliflowerTacos.html
+++ b/CauliflowerTacos.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chipotle Chicken Cooking Guide</title>
+    <title>Cauliflower Tacos</title>
     <link rel="stylesheet" href="./assets/css/cooking.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <script src="https://cdn.tailwindcss.com"></script>
@@ -40,10 +40,9 @@
             <button id="timer4" class="top-10 left-10 p-1 bg-zinc-800/80 dark:bg-white text-white dark:text-zinc-800 text-sm rounded m-2">20 Min Timer</button>
             <button class="group flex">
               <img src="./assets/logo/YesChefFavicon180.png" alt="Chef note" class="max-w-8 m-2">
-                <span class="group-hover:opacity-75 bg-white text-sm text-black rounded-lg absolute opacity-0 m-3 ">check Cauliflower at 20min, if it is not golden brown and tender, roast for another 5min</span> 
+                <span class="group-hover:opacity-75 bg-white text-sm text-black rounded-lg absolute opacity-0 m-3">check Cauliflower at 20min, if it is not golden brown and tender, roast for another 5min</span> 
             </button>
           </p>
-            
           <p class="flex flex- items-center">5. Remove from the Oven, prepare the tacos, and serve as fresh as possible
             <button class="group flex">
               <img src="./assets/logo/YesChefFavicon180.png" alt="Chef note" class="max-w-8 m-2">
@@ -59,7 +58,7 @@
           <p>1. On another lined baking sheet, add the 1/4 cup of Raw Almonds and 4 Garlic Cloves with skin.</p>
             <br />
           <p class="flex flex- items-center">2. Roast the Almonds and Garlic Cloves with Skin on the middle rack for 8min
-            <button id="timer2" class="top-10 left-10 p-1 bg-zinc-800/80 dark:bg-white text-white dark:text-zinc-800 text-sm rounded m-2">8 Min Timer</button>
+            <button id="timer5" class="top-10 left-10 p-1 bg-zinc-800/80 dark:bg-white text-white dark:text-zinc-800 text-sm rounded m-2">8 Min Timer</button>
             <button class="group flex">
               <img src="./assets/logo/YesChefFavicon180.png" alt="Chef note" class="max-w-8 m-2">
                 <span class="group-hover:opacity-75 bg-white text-sm text-black rounded-lg absolute opacity-0 m-3 ">Check at 8min to see if the Almonds are dark and starting to split; if not continue roasting for 2-4 more minutes - do not let the Almonds burn</span> 
