--- a/ChipotleChicken.html
+++ b/ChipotleChicken.html
@@ -95,8 +95,7 @@
               5. Let the Chicken Thighs rest for 10 minutes after they have been
               cooked, then serve in your favorite tacos, burritos, or as a
               stand-alone meat with your meal.
-              <button id="timer3" class="p-1 bg-zinc-800/80 dark:bg-white text-white dark:text-zinc-800 text-sm rounded m-2">10 Min Timer
-              </button>
+              <button id="timer3" class="p-1 bg-zinc-800/80 dark:bg-white text-white dark:text-zinc-800 text-sm rounded m-2">10 Min Timer</button>
                 <button class="group flex">
                   <img src="./assets/logo/YesChefFavicon180.png" alt="Chef note" class="max-w-8 m-2">
                     <span class="group-hover:opacity-75 bg-white text-sm text-black rounded-lg absolute opacity-0 m-3 ">the Chicken Thighs will continue to cook while they rest, so make sure you plan for that in your cooking time and temperature</span> 
