--- a/CarneAsada.html
+++ b/CarneAsada.html
@@ -11,102 +11,65 @@
     <script defer src="./assets/js/cooking.js"></script>
     <script defer src="./assets/js/logic.js"></script>
   </head>
-  <body
-    class="bg-carne bg-fixed bg-cover bg-contain bg-no-repeat bg-center text-black dark:text-white"
-  >
-    <div
-      class="bg-transparent dark:bg-black/20 fixed inset-0 pointer-events-none"
-    ></div>
+  <body class="bg-carne bg-fixed bg-cover bg-contain bg-no-repeat bg-center text-black dark:text-white">
+    <div class="bg-transparent dark:bg-black/20 fixed inset-0 pointer-events-none"></div>
 
-    <header
-      id="logoBackgroundSmall"
-      class="bg-gradient-to-r from-transparent dark:from-transparent to-white/90 dark:to-zinc-800/90 flex-shrink"
-    >
-      <button
-        id="menuButton"
-        class="absolute top-10 left-10 p-2 bg-zinc-800 bg-opacity-30 text-white dark:text-zinc-300 rounded"
-      >
-        Menu
-      </button>
-      <img
-        id="logo"
-        src="./assets/logo/YesChefLogoBlack.svg"
-        alt="Yes, Chef Logo"
-        class="relative ml-auto mr-4 h-36"
-      />
-    </header>
+  <header id="logoBackgroundSmall" class="bg-gradient-to-r from-transparent dark:from-transparent to-white/90 dark:to-zinc-800/90 flex-shrink">
+      <button id="menuButton" class="absolute top-10 left-10 p-2 bg-zinc-800 bg-opacity-30 text-white dark:text-zinc-300 rounded">Menu</button>
+      <img id="logo" src="./assets/logo/YesChefLogoBlack.svg" alt="Yes, Chef Logo" class="relative ml-auto mr-4 h-36"/></header>
 
     <div id="menuContainer"></div>
 
     <main>
       <section
-        class="m-4 p-4 bg-white/90 dark:bg-zinc-800/90 text-zinc-900 dark:text-white rounded w-max mx-auto"
-      >
+        class="m-4 p-4 bg-white/90 dark:bg-zinc-800/90 text-zinc-900 dark:text-white rounded w-max mx-auto">
         <h1 class="text-4xl font-medium">Let's Start Cooking Carne Asada</h1>
       </section>
 
-      <section
-        class="m-4 p-4 bg-white/90 dark:bg-zinc-800/90 text-zinc-900 dark:text-white rounded w-max mx-auto"
-      >
+      <section class="m-4 p-4 bg-white/90 dark:bg-zinc-800/90 text-zinc-900 dark:text-white rounded w-max mx-auto">
         <h2>Prepare the marinade:</h2>
         <article class="indent-5">
           <p>
             1. Preheat the broiler, place the Jalepeños on a baking sheet and
             broil until skin begins to turn black, then flip and repeat on the
-            other side
-          </p>
+            other side</p>
           <br />
           <p>2.Stem, seed, and skin the Jalapeños into a blender</p>
           <br />
           <p>3. Core and quarter the Tomato, and add to the blender</p>
           <br />
-          <p>
-            4. Peel and quarter the Onion, and add 3 of the quarters into the
-            blender
-          </p>
+          <p>4. Peel and quarter the Onion, and add 3 of the quarters into the
+            blender</p>
           <br />
           <p>5. Peel the Garlic and add to the blender</p>
           <br />
-          <p>
-            6. Juice the Orange, and add the juice to the blender - save the
-            rind of the orange
-          </p>
+          <p>6. Juice the Orange, and add the juice to the blender - save the
+            rind of the orange</p>
           <br />
           <p>7. Juice 2 of the Limes, and add the juice to the blender</p>
           <br />
-          <p>
-            8. Rinse the cilantro and cut the bottom 2" off of the stems, add
-            half of the bunch to the blender
-          </p>
+          <p>8. Rinse the cilantro and cut the bottom 2" off of the stems, add
+            half of the bunch to the blender</p>
           <br />
-          <p>
-            9.Finally, add the Ancho Chili Powder, Sugar, Salt, Black Pepper,
-            Mirin, Avocado Oil and blend until smooth
-          </p>
+          <p>9.Finally, add the Ancho Chili Powder, Sugar, Salt, Black Pepper,
+            Mirin, Avocado Oil and blend until smooth</p>
         </article>
       </section>
 
-      <section
-        class="m-4 p-4 bg-white/90 dark:bg-zinc-800/90 text-zinc-900 dark:text-white rounded w-max mx-auto"
-      >
+      <section class="m-4 p-4 bg-white/90 dark:bg-zinc-800/90 text-zinc-900 dark:text-white rounded w-max mx-auto">
         <h3>Marinate the Arrachera:</h3>
         <article class="indent-5">
-          <p>
-            1. Add the Arrachera to a large bowl or zip lock bag (might take a
-            couple of bags)
-          </p>
+          <p>1. Add the Arrachera to a large bowl or zip lock bag (might take a
+            couple of bags)</p>
           <br />
-          <p>
-            2. Slice half of the Orange Rind and the last 1/4 of the Onion into
-            1/4" slices and add to the Marinade
-          </p>
+          <p>2. Slice half of the Orange Rind and the last 1/4 of the Onion into
+            1/4" slices and add to the Marinade</p>
           <br />
           <p>3. Mix the Corona with the Marinade.</p>
           <br />
-          <p>
-            4. Mix the meat in the marinade, seal, and let it marinate in the
+          <p>4. Mix the meat in the marinade, seal, and let it marinate in the
             refrigerator for 24 hours.
-            <button id="timer" class="p-1 bg-zinc-800/80 dark:bg-white text-white dark:text-zinc-800 text-sm rounded m-2">Timer</button>
+            <button id="timer6" class="p-1 bg-zinc-800/80 dark:bg-white text-white dark:text-zinc-800 text-sm rounded m-2">24 Hour Timer</button>
           </p>
           <br />
           <p>5. Flip the meat in the marinade halfway through</p>
@@ -140,7 +103,7 @@
           <p>
             4. Let stand for 10 minutes after removing from the grill and slice
             against the grain
-            <button id="timer" class="p-1 bg-zinc-800/80 dark:bg-white text-white dark:text-zinc-800 text-sm rounded m-2">Min Timer</button>
+            <button id="timer7" class="p-1 bg-zinc-800/80 dark:bg-white text-white dark:text-zinc-800 text-sm rounded m-2">10 Min Timer</button>
           </p>
           <br />
           <p>
@@ -151,6 +114,6 @@
         </article>
       </section>
     </main>
-    <script src="./assets/js/cooking.js"></script>
+    <script src="./assets/js/carneAsada.js"></script>
   </body>
 </html>
