updated Al Pastor HTML with timers and chef notes and completed functions for timers

--- a/AlPastor.html
+++ b/AlPastor.html
@@ -49,12 +49,38 @@
         <p>4. Cover on low heat for 10 minutes, then turn off heat and let it cool.</p>
         <p>5. Pour contents of the pan into the blender with the spices (Salt, Cumin, Oregano, Black Pepper, and All Spice), Chipotle Chiles, Chicken Stock, and Pineapple Juice, and blend until very smooth.</p>
         <br />
-        <p>6. Pour the contents of the blender through a fine-mesh strainer into a large bowl. Push the blended marinade through the strainer until no liquid remains. Discard the solids.
-          
+        <p class="flex flex- items-center">6. Pour the contents of the blender through a fine-mesh strainer into a large bowl. Push the blended marinade through the strainer until no liquid remains. Discard the solids.
+          <button class="group flex">
+            <img src="./assets/logo/YesChefFavicon180.png" alt="Chef note" class="max-w-8 m-2">
+              <span class="group-hover:opacity-75 bg-white text-sm text-black rounded-lg absolute opacity-0 m-3">You can also keep the solids to make an incredible salsa...</span> 
+          </button></p>
+        <p>7. Mix the Pork slices into the large bowl of marinade until they are coated. Cover and put back into the refrigerator to marinate for 4-24 hours.
+          <button id="timer11" class="top-10 left-10 p-1 bg-zinc-800/80 dark:bg-white text-white dark:text-zinc-800 text-sm rounded m-2">24 Hour Timer</button>
         </p>
       </article>
     </section>
 
+    <section class="m-4 p-4 bg-white/90 dark:bg-zinc-800/90 text-zinc-900 dark:text-white rounded w-max mx-auto">
+      <h3>Cook the Pork:</h3>
+      <article class="indent-5">
+        <p class="flex flex- items-center">1. Preheat your bbq grill to as hot as possible.
+          <button class="group flex">
+            <img src="./assets/logo/YesChefFavicon180.png" alt="Chef note" class="max-w-8 m-2">
+              <span class="group-hover:opacity-75 bg-white text-sm text-black rounded-lg absolute opacity-0 m-3 ">A little char of the marinade on the pork brings out incredible flavors</span> 
+        </button></p>
+        <br />
+        <p>2. Cook the Pork on the grill until an internal temperature of 160 degrees</p>
+        <br />
+        <p>3. Slice and cook Pineapple slices on the grill alongside the Pork for best flavor</p>
+        <br />
+        <p>4. Once cooked fully, remove the Pork from the Grill and let it rest for a minimum of 10 minute
+          <button id="timer12" class="top-10 left-10 p-1 bg-zinc-800/80 dark:bg-white text-white dark:text-zinc-800 text-sm rounded m-2">10 Min Timer</button></p>
+        </p>
+        <br />
+        <p>5. Dice the Pork and Pineapple. Serve in tacos, burritos, or any of your other favorite meals.</p>
+      </article>
+    </section>
   </main>
+  <script src="./assets/js/AlPastor.js"></script>
   </body>
 </html>
