--- a/CarneAsada.html
+++ b/CarneAsada.html
@@ -83,33 +83,23 @@
             1.Put your grill on as high of heat as possible.
             <button class="group flex">
               <img src="./assets/logo/YesChefFavicon180.png" alt="Chef note" class="max-w-8 m-2">
-              <span class="group-hover:opacity-75 bg-white text-sm text-black rounded-lg absolute opacity-0 m-3 ">the_Chicken_Thighs_will_continue_to_cook_while_they_rest,_so_make_sure_you_plan_for_that_in_your_cooking_time_and_temperature</span> 
-              </button>
-            <!-- <button class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center before:content-['Chef_Note'] hover:before:content-['The_hotter_the_better,_as_a_little_bit_of_char_on_the_outside_of_the_meat_makes_for_amazing_flavor!']">
-            </button> -->
-          </p>
+              <span class="group-hover:opacity-75 bg-white text-sm text-black rounded-lg absolute opacity-0 m-3 ">The hotter the better, as a little bit of char on the outside of the meat makes for amazing flavor!</span> 
+              </button></p>
           <br />
           <p>2. Lightly oil the grill with some Avocado oil</p>
           <br />
-          <p class="flex flex- items-center">
-            3. Cook the Arrachera until desired temperature
-            <!-- <button class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center before:content-['Chef_Note'] hover:before:content-['The_thin_Arrachera_cooks_very_fast_so_do_not_leave_it_unattended!']"></button> -->
+          <p class="flex flex- items-center">3. Cook the Arrachera until desired temperature
             <button class="group flex">
               <img src="./assets/logo/YesChefFavicon180.png" alt="Chef note" class="max-w-8 m-2">
-              <span class="group-hover:opacity-75 bg-white text-sm text-black rounded-lg absolute opacity-0 m-3 ">the_Chicken_Thighs_will_continue_to_cook_while_they_rest,_so_make_sure_you_plan_for_that_in_your_cooking_time_and_temperature</span> 
-              </button>
-          </p>
+              <span class="group-hover:opacity-75 bg-white text-sm text-black rounded-lg absolute opacity-0 m-3 ">he thin Arrachera cooks very fast, so do not leave it unattended!</span> 
+              </button></p>
           <br />
-          <p>
-            4. Let stand for 10 minutes after removing from the grill and slice
+          <p>4. Let stand for 10 minutes after removing from the grill and slice
             against the grain
-            <button id="timer7" class="p-1 bg-zinc-800/80 dark:bg-white text-white dark:text-zinc-800 text-sm rounded m-2">10 Min Timer</button>
-          </p>
+            <button id="timer7" class="p-1 bg-zinc-800/80 dark:bg-white text-white dark:text-zinc-800 text-sm rounded m-2">10 Min Timer</button></p>
           <br />
-          <p>
-            5. Serve with sliced Lime wedges from the remaining lime, and diced
-            Cilantro
-          </p>
+          <p>5. Serve with sliced Lime wedges from the remaining lime, and diced
+            Cilantro</p>
           <br />
         </article>
       </section>
